# Management-of-software-development-project

./: README.md  TASK_ANALYSIS.json  TASK_ANALYSIS_SUMMARY.md  package-lock.json  temp.txt
AI/: .env.example  .gitignore  DEPLOYMENT_ROADMAP.md  Dockerfile  Dockerfile.worker  Makefile  RAG_INTEGRATION_SUMMARY.md  README.md  SERVICE_CONNECTIONS.md  TEST_RAG_DOCKER.md  docker-compose.yml  index_txt_simple.py  load_txt_to_rag.py  prefect.yaml  pyproject.toml  rebuild_llm_service.ps1  test_system_prompt.py  test_tool_calling.py  test_txt_rag.py  upload_txt_simple.py
AI/deployments/: Dockerfile.cv-service  Dockerfile.llm-service  Dockerfile.ml-service  Dockerfile.worker
AI/docs/: CV_API_ENDPOINTS.md  CV_SERVICE.md  DEPLOYMENT_ROADMAP.md  EMAIL_SERVICE.md  HOTEL_SYSTEM_ARCHITECTURE.md  LLM_SERVICE.md  ML_API_GUIDE.md  ML_SERVICE.md  PREFECT_SERVICE.md  STORAGE_SERVICE.md
AI/infrastructure/monitoring/: prometheus.yml
AI/infrastructure/postgres/: 05-face_recognition_schema.sql  06-image-search-schema.sql  07-hotel-document-upload.sql  08-sample-images-data.sql  MOS_creation_script.sql  MOS_data_script.sql  init-db.sql  init-pgvector.sql
AI/rag_demo/: test.txt
AI/scripts/: add_real_images.py  populate_image_embeddings.py  populate_rag_hotels.py
AI/src/application/: main.py
AI/src/application/controllers/cv/: __init__.py  face_controller.py  image_search_controller.py  main.py
AI/src/application/controllers/hotel/: upload_controller.py
AI/src/application/controllers/llm/: email_router.py  main.py  rag_router.py  rag_router_v2.py  router.py  tools_router.py
AI/src/application/controllers/ml/: __init__.py  main.py  router.py
AI/src/application/controllers/storage/: __init__.py  main.py  storage_controller.py
AI/src/application/dtos/cv/: __init__.py  face_dto.py  image_search_dto.py
AI/src/application/dtos/llm/: chat_dto.py  (+4 more)
AI/src/application/ml_models/: __init__.py  model_registry.py
AI/src/flow/: email_flow.py  hello_flow.py  load_txt_rag_flow.py  rag_flow.py
AI/src/infrastructure/: config.py
AI/src/utils/: logger.py
AI/templates/emails/: booking_confirmation.html  check_in_ready.html  checkout_reminder.html  ml_report.html  promotional.html  staff_attendance.html
AI/test/: conftest.py  test_main.py
AI/test/cv/: README.md  conftest.py
AI/test/cv/integration/: test_face_api.py  test_image_search_api.py
AI/test/cv/manual/: __init__.py  search_images_cli.py  test_image_search_manual.py
AI/test/cv/performance/: __init__.py  benchmark_image_search.py
AI/test/cv/unit/: test_face_quality.py  test_face_service.py  test_image_search_service.py
AI/test/email/: test_email_simple.py
AI/test/llm/: __init__.py  test_chat.py  test_router.py
AI/test/ml/: __init__.py  test_churn_predictor.py  test_clv_calculator.py  test_clv_feature_engineering.py  test_pricing_optimizer.py  test_recommender.py  test_router.py
AI/test/storage/: conftest.py  test_minio_api.py  test_minio_dto.py  test_minio_service.py  test_storage_controller.py
(+336 files in other folders)
