[project]
name = "hotel-ai-system"
version = "0.1.0"
description = "Hotel AI Management System with CV, ML, LLM services and Prefect orchestration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # ===== Core Dependencies (Common for all services) =====
    # Web Framework
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "email-validator>=2.0.0",
    "python-multipart>=0.0.6",
    # Database
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.9",
    "psycopg[binary]>=3.1.0",
    "psycopg-pool>=3.2.0",
    "asyncpg>=0.29.0",
    "alembic>=1.12.1",
    # Redis
    "redis>=5.0.1",
    # Object Storage
    "minio>=7.2.0",
    "boto3>=1.29.7",
    # HTTP Client
    "httpx>=0.25.2",
    "requests>=2.31.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "python-json-logger>=2.0.7",
    "tenacity>=8.2.3",
    # Message Queue (for CV attendance events)
    "pika>=1.3.2",
    "aio-pika>=9.3.1",
]

[project.optional-dependencies]
# ===== Computer Vision Service =====
cv = [
    "opencv-python>=4.8.1",
    "pillow>=10.1.0",
    "insightface>=0.7.3",
    "onnxruntime>=1.16.0",
    "numpy>=1.24.0",
    "scikit-image>=0.22.0",
    "pgvector>=0.2.0",
]

# ===== Machine Learning Service =====
ml = [
    "scikit-learn>=1.3.2",
    "xgboost>=2.0.2",
    "lightgbm>=4.1.0",
    "pandas>=2.1.3",
    "numpy>=1.24.0",
    "mlflow>=2.9.2",
]

# ===== LLM Service =====
llm = [
    "openai>=1.3.0",
    "anthropic>=0.7.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.2",
    "langchain-core>=0.1.0",
    "langgraph>=0.2.0",
    "langgraph-checkpoint-postgres>=0.0.1",
    "tiktoken>=0.5.2",
    "llama-index>=0.10.0",
    "llama-index-vector-stores-postgres>=0.1.0",
    "llama-index-embeddings-openai>=0.1.0",
    "google-generativeai>=0.3.0",
    "google-genai>=1.52.0",
    "jinja2>=3.1.3",
    "aiosmtplib>=3.0.1",
]

# ===== Prefect Worker =====
worker = [
    "prefect>=3.0.0",
    "prefect-redis>=0.2.0",
    # Dependencies for email flow
    "aiosmtplib>=3.0.1",
    "jinja2>=3.1.3",
    # Minimal HTTP client for API calls
    "httpx>=0.25.2",
]

# ===== Development =====
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "black>=23.11.0",
    "ruff>=0.1.6",
    "mypy>=1.7.1",
    "ipython>=8.18.1",
    "ipdb>=0.13.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
